@@ -1,7 +1,7 @@
 package test.jpa.more.business;
 
-import com.google.common.collect.ImmutableList;
 import jakarta.persistence.Query;
+import java.util.List;
 import org.iglooproject.jpa.exception.SecurityServiceException;
 import org.iglooproject.jpa.exception.ServiceException;
 import org.iglooproject.jpa.more.business.task.util.TaskStatus;
@@ -20,7 +20,7 @@ class QueuedTaskHolderServiceTest extends AbstractJpaMoreTestCase {
                     + "from QueuedTaskHolder queuedTaskHolder\n"
                     + "where queuedTaskHolder.status in (:statuses) and queuedTaskHolder.queueId = :queue\n"
                     + "order by queuedTaskHolder.id asc")
-            .setParameter("statuses", ImmutableList.of(TaskStatus.CANCELLED, TaskStatus.COMPLETED))
+            .setParameter("statuses", List.of(TaskStatus.CANCELLED, TaskStatus.COMPLETED))
             .setParameter("queue", "queue");
     query.getResultList();
   }
@@ -34,7 +34,7 @@ class QueuedTaskHolderServiceTest extends AbstractJpaMoreTestCase {
                     + "from QueuedTaskHolder queuedTaskHolder\n"
                     + "where queuedTaskHolder.status in (?1) and queuedTaskHolder.queueId = ?2\n"
                     + "order by queuedTaskHolder.id asc")
-            .setParameter(1, ImmutableList.of(TaskStatus.CANCELLED, TaskStatus.COMPLETED))
+            .setParameter(1, List.of(TaskStatus.CANCELLED, TaskStatus.COMPLETED))
             .setParameter(2, "queue");
     query.getResultList();
   }
