@@ -5,7 +5,6 @@ import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 
-import com.google.common.collect.ImmutableList;
 import com.google.common.collect.Lists;
 import igloo.wicket.condition.Condition;
 import igloo.wicket.model.CollectionCopyModel;
@@ -371,7 +370,7 @@ public abstract class AbstractAnyTargetTestLinkDescriptorMapper extends Abstract
     IModel<List<Person>> model =
         CollectionCopyModel.custom(
             Suppliers2.<Person>arrayListAsList(), GenericEntityModel.<Person>factory());
-    model.setObject(ImmutableList.of(person1, person2));
+    model.setObject(List.of(person1, person2));
     IOneParameterLinkDescriptorMapper<? extends ILinkDescriptor, List<Person>> mapper =
         buildWithOneParameterTarget(
             LinkDescriptorBuilder.start()
