@@ -141,7 +141,7 @@ public class ActionColumnPlaceholderBuilder<T> implements IActionColumnBaseBuild
   public IActionColumnBaseBuilder<T> withClass(
       IDetachableFactory<? super IModel<? extends T>, ? extends IModel<? extends String>>
           valueModelFactory) {
-    return withClass(ImmutableList.of(Objects.requireNonNull(valueModelFactory)));
+    return withClass(List.of(Objects.requireNonNull(valueModelFactory)));
   }
 
   public IActionColumnBaseBuilder<T> withClass(IModel<? extends String> valueModel) {
@@ -164,7 +164,7 @@ public class ActionColumnPlaceholderBuilder<T> implements IActionColumnBaseBuild
 
   public IActionColumnBaseBuilder<T> add(
       IDetachableFactory<? super IModel<? extends T>, ? extends Behavior> behaviorFactory) {
-    return add(ImmutableList.of(Objects.requireNonNull(behaviorFactory)));
+    return add(List.of(Objects.requireNonNull(behaviorFactory)));
   }
 
   public IActionColumnBaseBuilder<T> add(Behavior firstBehavior, Behavior... otherBehaviors) {
